--- a/pohledy/akce.phtml
+++ b/pohledy/akce.phtml
@@ -142,6 +142,9 @@
                         }
                         ?>
                     </div>
+                    <form method="post">
+                        <button type="submit" name="cele_smazat">Smazat</button>
+                    </form>
                 </div>
             <?php
             }
@@ -252,7 +255,7 @@
 
                 <!-- Výběr Discipliny s checkboxy-->
                     <div>
-                        <label for="cb_del">Tlačítko pro smazání vybraných disciplín</label>
+                        <label for="cb_smazat">Tlačítko pro smazání vybraných disciplín</label>
                         <button type="submit" name="cb_smazat">Smazat</button>
                         <?php 
                             foreach ($this->data['akcedisc'] as $ad){
