--- a/pohledy/ldap.phtml
+++ b/pohledy/ldap.phtml
@@ -8,21 +8,21 @@ use LdapRecord\Connection;
 use LdapRecord\Models\ActiveDirectory\Group;
 use Dotenv\Dotenv;
 
-  /*  $connection = new Connection([
+    $connection = new Connection([
         'hosts' => ['192.168.1.31'],
         'username' => 's.fabisz.st@testovaci.local',
         'password' => '',
         'base_dn' => 'dc=testovaci,dc=local',
         'port' => 389,
-    ]);*/
+    ]);
 
-    $connection = new Connection([
+  /*  $connection = new Connection([
         'hosts' => ['msad19.spseiostrava.cz'],
         'username' => 's.fabisz.st@spseiostrava.cz',
         'password' => '11082004Sf',
         'base_dn' => 'dc=msad19,dc=spseiostrava,dc=cz',
         'port' => 389,
-    ]);
+    ]);*/
     
     $connection->connect();
     Container::addConnection($connection, 'ldap'); // Přidejte připojení do kontejneru s názvem 'ldap'
@@ -54,40 +54,39 @@ use Dotenv\Dotenv;
     $modelyUzivatelu = new ModelyUzivatel;
 
         // Sestavte dotaz pro získání jmen a příjmení všech uživatelů v organizační jednotce SpseiUsers
-    /*    $users = User::on('ldap')->select('givenName', 'sn','mail')->in('OU=SpseiUsers,dc=msad19,dc=spseiostrava,dc=cz')->get();
-        foreach ($users as $user) {
-            $ldapEmail = $user->mail[0];
-            
-          // var_dump($user);
-            //var_dump($ldapEmail);
-        
-            // Najděte uživatele v databázi podle jména a příjmení
-            //var_dump($user->givenName[0]);
-           // var_dump($user->sn[0]);
-            $existingUser = Db::dotazJeden("SELECT * FROM uzivatel WHERE jmeno = ? AND prijmeni = ?", [$user->givenName[0], $user->sn[0]]);
-            
-        
-            if ($existingUser) {
-                // Aktualizujte e-mail v databázi
-                $hodnoty = [
-                    "id_uziv" => $existingUser["id_uziv"],
-                    "email" => $ldapEmail,
-                    
-                ];
-        
-                $zmenaVDb = $modelyUzivatelu->zmenUzivatele($hodnoty);
-        
-                if ($zmenaVDb === 1) {
-                    echo "E-mail uživatele " . $user->givenName[0] . " úspěšně aktualizován na $ldapEmail.<br>";
-                } else {
-                    echo "Chyba při aktualizaci e-mailu uživatele " . $user->givenName[0] ." ". $user->sn[0] . ".<br>";
-                }
-            } else {
-                echo "Uživatel " . $user->givenName[0] . " nenalezen v databázi.<br>";
-            }
-        }
+    /*    $users = User::on('ldap')->select('givenName', 'sn','mail')->in('OU=SpseiUsers,dc=testovaci,dc=local')->get();
+   
 
-        ?>
+
+        $uspesneAktualizovaneEmaily = 0;
+        $neuspesneAktualizovaneEmaily = 0;
+        $nenalezenyUzivatel=0;
+
+foreach ($users as $user) {
+    $ldapEmail = $user->mail[0];
+
+    $existingUser = Db::dotazJeden("SELECT * FROM uzivatel WHERE jmeno = ? AND prijmeni = ?", [$user->givenName[0], $user->sn[0]]);
+
+    if ($existingUser) {
+        $hodnoty = [
+            "id_uziv" => $existingUser["id_uziv"],
+            "email" => $ldapEmail,
+        ];
+
+     //   $zmenaVDb = $modelyUzivatelu->zmenUzivatele($hodnoty);
+
+    
+    } else {
+        $nenalezenyUzivatel++;
+       // echo "Uživatel " . $user->givenName[0] ." ". $user->sn[0] . " nenalezen v databázi.<br>";
+    }
+}*/
+
+//echo "Počet úspěšně aktualizovaných e-mailů: $uspesneAktualizovaneEmaily<br>";
+//echo "Počet neúspěšně aktualizovaných e-mailů: $neuspesneAktualizovaneEmaily<br>";
+//echo "Počet nenalezených uživatelů :  $nenalezenyUzivatel<br>";
+     ?>
+
         <h2>Přihlášení uživatele</h2>
 <form method="post">
     <div>
@@ -103,10 +102,17 @@ use Dotenv\Dotenv;
 
 <?php 
 
-if ($_SERVER['REQUEST_METHOD'] === 'POST') {
+
+
+
+ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
     // Retrieve submitted email and password
     $submittedEmail = $_POST['email'];
     $submittedPassword = $_POST['heslo'];
+    $_SESSION['loggedIn'] = true; 
+    
+    $_SESSION['email'] =  $submittedEmail;
+   // var_dump($_SESSION['email']);
 
     // Authenticate the user against LDAP
     try {
@@ -117,7 +123,55 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
         
         if ($connection->auth()->attempt($user->getDn(), $submittedPassword)) {
             // User has been successfully authenticated.
-            echo "User successfully authenticated. Email: " . $user->mail[0];
+
+            foreach ($this->data['uzivatel'] as $uziv) {
+                if ($uziv["email"] == $submittedEmail) {
+                    $_SESSION["opravneni"] = $uziv["opravneni"];
+                }
+            }
+
+
+           header("Refresh: 0");
+           if (strpos($submittedEmail, '.st') === false) {
+            // Call the method to add a teacher from ModelyUzivatel
+           
+            $id= $modelyUzivatelu->vratPosledniIdUcitele();
+
+            foreach ($modelyUzivatelu->vratInfoVsechUcitelu() as $ucitel) {
+                // Získání e-mailu učitele
+                $ucitelEmail = $ucitel['email']; // Předpokládejme, že e-mail je uložený ve formě asociativního pole pod klíčem 'email'
+            
+                // Kontrola, zda se e-mail učitele rovná e-mailu odeslanému ve formuláři
+                if ($ucitelEmail !== $submittedEmail) {
+                    // E-mail učitele se neshoduje s e-mailem z formuláře, zavolejte metodu pro přidání učitele
+                     $id+=1;
+            $uzivatel = [
+                'id_uziv' => $id,
+              //  'email' => $submittedEmail,
+                'opravneni' => 1,
+                'jmeno' => $user->givenName[0] ,
+                'prijmeni' =>$user->sn[0],
+            ];
+            $pridaniUc=$modelyUzivatelu->pridejUcitele($uzivatel);
+            
+            if($pridaniUc){
+                $this->pridejZpravu("Učitel přidán do databáze."); 
+            }
+            else{
+                $this->pridejZpravu("Učitel nebyl přidán do databáze."); 
+            }
+
+                }
+            }
+
+
+
+
+
+
+
+           
+        }
         } else {
             // Check if the email is incorrect
             $userByEmail = User::on('ldap')->where('mail', '=', $submittedEmail)->first();
@@ -130,58 +184,12 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
         //echo "An error occurred: " . $e->getMessage();
         echo "Špatně zadaný email";
     }
+
+// ...
+
 }
 
 
-
-        // Vypisujte jmena a prijmeni uzivatelu
-       /* foreach ($users as $user) {
-            echo "Jméno: " . $user->cn[0] . "<br>";
-            echo "Příjmení: " . $user->sn[0] . "<br>";
-            echo "Email: " . $user->mail[0] . "<br>";
-            echo "------------------------<br>";
-                                    }*/
-
-    
-
-
-   /* $modUz = new ModelyUzivatelu;
-        $uzivatele = $modUz->vratVsechnyUzivatele(); // Použijte odpovídající funkci pro načtení uživatelů z databáze
-
-        foreach ($uzivatele as $dbUzivatel) {
-            // Získání jména a příjmení uživatele z databáze
-            $jmeno = $dbUzivatel['jmeno'];
-            $prijmeni = $dbUzivatel['prijmeni'];
-
-            //echo "$jmeno $prijmeni";
-        
-            // Vyhledejte uživatele v LDAP podle jména a příjmení
-            $ldapUzivatel = User::query()->where('name', $jmeno)->where('surname', $prijmeni)->first();
-        
-            // Získání e-mailu, pokud byl uživatel nalezen v LDAP
-            if ($ldapUzivatel) {
-                $ldapEmail = $ldapUzivatel->getEmail();
-                echo "LDAP Email pro $jmeno $prijmeni: $ldapEmail";
-            } else {
-                echo "Uživatel $jmeno $prijmeni nebyl nalezen v LDAP.";
-            }
-        }*/
-        
-
-
- 
- 
- 
-    /*   $users = User::query()->select(["givenName","mail"])
-    ->where('givenName', '=', "Samuel")
-    ->where('sn', '=', "Fabisz")
-    ->where('memberof', '=', 'CN=trida_i4b,OU=SpseiGroups,DC=testovaci,DC=local')
-    ->get();
-
-    $count = $users->count(); //kontroluju jestli nejsou dva zaci v jedne tride se stejnym jmenem
-    echo "-----------" . $count . "---------";
-
-   // var_dump($users);*/
 
 
    
